# pysmurf-custom-transmitter-example

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  build_docker.sh
.github/workflows/: cd.yaml
python/mymodule/transmitters/: _MyTransmitter.py
scripts/: start_example_server.sh
server_scripts/: cmb_eth.py  cmb_pcie.py  dev_board_eth.py  dev_board_pcie.py
src/: my_transmitter.cpp
